--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   "homepage": "https://github.com/KevinWithrow/StudentList#readme",
   "dependencies": {
     "express": "4.17.1",
-    "knex": "^0.21.1",
+    "hbs": "4.1.1",
+    "knex": "0.21.1",
+    "nodemon": "2.0.3",
     "pg": "8.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "2.0.3"
   }
 }
